HBASE-27179 Issues building with OpenJDK 17 (#4594)
Fix test case failures in org.apache.hadoop.hbase.http.log.TestLogLevel under Openjdk 17 because of a missing export of java.security.jgss/sun.security.krb5.
Removed option --illegal-access=permit ignored since Openjdk 17.

Signed-off-by: Duo Zhang <zhangduo@apache.org>